# BrickDPO

./: .gitignore  EVAL_BASELINE_GUIDE.md  EVAL_INFERENCE_GUIDE.md  PERFORMANCE_NOTES.md  README.md  README_OG.md  README_TEAM.md  pyproject.toml
outputs/: fast_ferrari.ldr  fast_ferrari.txt  ferrari.ldr  ferrari.txt  guitar.ldr  guitar.txt  red_guitar.ldr  red_guitar.txt  sofa_demo.ldr  sofa_demo.txt
proj_develop/: 16.ldr  16.txt  convert_dpo_csv_to_parquet.py  create_test_set.py  eval_stats.py  fine_tune_dpo.py  merge_dpo_dataset_chunks.py  merge_sft_model.py  new_dataset.ipynb  plotting_utils.py  prepare_dpo_dataset.py
proj_develop/batch_outputs_train_0-10/: brick_rejection_reasons.csv  dpo_data.parquet  regeneration_stats.csv
proj_develop/datasets/: 4class_stablebrick2text_test.parquet
proj_develop/datasets/dpo_datasets/combined_dataset/: brick_rejection_reasons.csv  brick_rejections_stats.csv  regeneration_stats.csv
proj_develop/datasets/dpo_datasets/combined_test_dataset/: brick_rejection_reasons.csv  brick_rejections_stats.csv  dpo_data.parquet  regeneration_stats.csv
proj_develop/datasets/test_sets/: test_set_maxlen_2048_topk_100.parquet  test_set_maxlen_2048_topk_25_2prompts.parquet
proj_develop/inference/: eval_baseline_test_set_maxlen_2048_topk_100_20251207_211429.jsonl
proj_develop/inference/dpo_base_2048_eval/: dpo_base_2048_eval.json  stats.txt
proj_develop/inference/dpo_base_2500_eval/: dpo_base_2500_eval.json  stats.txt
proj_develop/inference/dpo_baseline_eval/: dpo_baseline.json
proj_develop/inference/dpo_partial_eval/: dpo_partial_eval.json
proj_develop/outputs/: ps_table.ldr  ps_table.txt  text_prompt.ldr  text_prompt.txt  upside_down_char.ldr  upside_down_char.txt
src/brickgpt/: batch_infer.py  batch_infer_incremental.py  collect_alignment_data.py  eval_BrickGPT.py  eval_baseline.py  eval_infer.py  eval_utils.py  infer_our_model.py  structure_render.py
src/brickgpt/models/: brickgpt.py
src/demo/: app.py  pyproject.toml  render_bricks.py
src/demo/examples/: examples.json
(+41 files in other folders)
