[project]
name = "brickgpt"
version = "0.1.2"
description = "Official repository for BrickGPT"
readme = "README.md"
authors = [
    { name = "Ava Pun", email = "apun@andrew.cmu.edu" }
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "bpy",
    "gurobipy",
    "numpy<2", # lower version of numpy needed for bpy
    "peft",
    "torch",
    "transformers",
    "pandas",
    "pyarrow>=20.0.0",
    "matplotlib>=3.10.7",
    "datasets>=3.6.0",
    "trl>=0.17.0",
    "typing-extensions>=4.9.0",
    "wandb>=0.19.11",
    "bitsandbytes>=0.48.2",
]

[project.optional-dependencies]
finetuning = [
    "trl",
    "wandb",
]

[project.scripts]
infer = "brickgpt.infer:main"
prepare_finetuning_dataset = "brickgpt.prepare_finetuning_dataset:main"
render_bricks = "brickgpt.render_bricks:main"
batch_infer = "brickgpt.batch_infer:main"
batch_infer_incremental = "brickgpt.batch_infer_incremental:main"
eval_infer = "brickgpt.eval_infer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest"]
